src/objects/Resource_Request_Object__c.object
<CustomObject>
    <description>An Executive Briefing usually hosts key decision makers from a high potential account. The Executive Briefing Program&apos;s host (usually an account manager) requests an EBC via the Resource Request button in SFDC.  The host/requester fills out the necessary information and submits it.  It is then send to the EBC Coordinators to request the Briefing and works with the Executive Assistants to book the room and Presenters that will provide the appropriate level of executive interaction or a high degree of technical expertise based on the proposed agenda.

The events take place at Nimble Storage Headquarters in San Jose, CA.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Resource_Request_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_End_Time__c</fullName>
        <label>Actual End Time</label>
        <picklist>
            <picklistValues>
                <fullName>11:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM (PST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Event_Date__c</fullName>
        <description>This will be populated by the EBC Coordinator, the AE will NOT be able to edit this field.</description>
        <label>Actual Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>9:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM (PST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <description>Additional Notes</description>
        <inlineHelpText>If you have a specific request and do not see space for it, please insert here in the Additional Notes section</inlineHelpText>
        <label>Additional Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <inlineHelpText>Please list the company&apos;s Annual Revenue</inlineHelpText>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Presenter__c</fullName>
        <label>Application Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture_Deep_Dive_Presenter__c</fullName>
        <label>Architecture Deep Dive Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_1_Name__c</fullName>
        <description>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</description>
        <inlineHelpText>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</inlineHelpText>
        <label>Attendee 1 Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_1_Title__c</fullName>
        <label>Attendee 1 Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_2_Name__c</fullName>
        <description>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</description>
        <inlineHelpText>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</inlineHelpText>
        <label>Attendee 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_2_Title__c</fullName>
        <label>Attendee 2 Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_3_Name__c</fullName>
        <description>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</description>
        <inlineHelpText>An accurate list of customer/partner attendees is required for ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</inlineHelpText>
        <label>Attendee 3 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_3_Title__c</fullName>
        <label>Attendee 3 Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASL_Tech_Deep_Dive_Presenter__c</fullName>
        <label>CASL / Tech Deep Dive Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Overview_Presenter__c</fullName>
        <label>Channel Overview Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Environment__c</fullName>
        <description>List visitor’s technology environment including topics listed below. This section should contain enough detail to allow executives to immediately understand the prospect’s technological environment.</description>
        <inlineHelpText>What does their current infrastructure/environment currently look like?</inlineHelpText>
        <label>Company Environment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Established_Since__c</fullName>
        <description>please enter the four digit year ####</description>
        <label>Company  Established Since</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Overview_Presenter__c</fullName>
        <label>Company Overview Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Profile__c</fullName>
        <description>Please identify company information for the Executives to review prior to the EBC.</description>
        <inlineHelpText>Please identify company information for the Executives to review prior to the EBC.</inlineHelpText>
        <label>Company Profile</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Please list at least 5 major competitors.</description>
        <inlineHelpText>Please list at least 5 major competitors.</inlineHelpText>
        <label>Competitors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dinner_Reservations__c</fullName>
        <description>If you require dinner reservations to be made on your behalf, please specify the date/time.</description>
        <inlineHelpText>If you require dinner reservations to be made on your behalf, please specify the date/time.</inlineHelpText>
        <label>Dinner Reservations</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EBC_Event_Cancelled_Rescheduled__c</fullName>
        <description>Please identify if you need to cancel or reschedule the existing EBC.</description>
        <label>EBC Event Cancelled / Rescheduled</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reschedule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBC_Room_and_Technical__c</fullName>
        <description>Please let us know your thoughts.  Was the room and technical adequate to suit the needs of your EBC?</description>
        <inlineHelpText>Please let us know your thoughts.  Was the room and technical adequate to suit the needs of your EBC?</inlineHelpText>
        <label>EBC Room and Technical</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Needs Help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBC_Schwag__c</fullName>
        <description>The normal schwag put out for EBCs is:  Notepad, Pen and Mints

Anything beyond the normal schwag may be ordered by you via the MyNimbleGearStore site or by connecting with Julie Lewis.</description>
        <inlineHelpText>The normal schwag put out for EBCs is:  Notepad, Pen and Mints

Anything beyond the normal schwag may be ordered by you via the MyNimbleGearStore site or by connecting with Julie Lewis.</inlineHelpText>
        <label>EBC Schwag</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Needs Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBC_Status__c</fullName>
        <inlineHelpText>This will show you the current Status of your EBC</inlineHelpText>
        <label>EBC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted by Sales Rep</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review by EBC Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Secured / Logistics Still Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Secured / Event and Presenters Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Completed / Feedback Requested / Event Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EBC_Time_Management_Agenda_Timeline__c</fullName>
        <description>How was the timing of your EBC?   Were there enough breaks?</description>
        <inlineHelpText>How was the timing of your EBC?   Were there enough breaks?</inlineHelpText>
        <label>EBC Time Management / Agenda Timeline</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Needs Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Cancelled_Reschedule_Comments__c</fullName>
        <description>Please explain why this is being cancelled and if they wish to reschedule, which date(s) are being requested.</description>
        <inlineHelpText>Please explain why this is being cancelled and if they wish to reschedule, which date(s) are being requested.</inlineHelpText>
        <label>Event Cancelled / Reschedule Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Cancelled_Rescheduled_By__c</fullName>
        <label>Event Cancelled / Rescheduled By</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Cancelled_Rescheduled_On__c</fullName>
        <label>Event Cancelled / Rescheduled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Financial_Overview_Presenter__c</fullName>
        <label>Financial Overview Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_and_Beverage__c</fullName>
        <description>How were the snacks, coffee, bottled water?  If your EBC was longer than 3 hours or over lunchtime, your EBC offered catered food, how was that?</description>
        <inlineHelpText>How were the snacks, coffee, bottled water?  If your EBC was longer than 3 hours or over lunchtime, your EBC offered catered food, how was that?</inlineHelpText>
        <label>Food and Beverage</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Needs Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Least_applicable_presenter_presentation__c</fullName>
        <description>If there was a presenter/presentation that you do not feel represented Nimble in the right fashion for EBCs, please let us know.  The presenter will not be made aware of this, it is merely for the EBC Coordinator.</description>
        <inlineHelpText>If there was a presenter/presentation that you do not feel represented Nimble in the right fashion for EBCs, please let us know.  The presenter will not be made aware of this, it is merely for the EBC Coordinator.</inlineHelpText>
        <label>Least applicable presenter/presentation?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <description>Market capitalization (or market cap) is the total dollar market value of the shares outstanding of a publicly traded company; it is equal to the share price times the number of shares outstanding.</description>
        <inlineHelpText>Market capitalization (or market cap) is the total dollar market value of the shares outstanding of a publicly traded company; it is equal to the share price times the number of shares outstanding.</inlineHelpText>
        <label>Market Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Objectives_for_the_EBC__c</fullName>
        <description>What is the objective for this EBC?</description>
        <inlineHelpText>What is the objective for this EBC?</inlineHelpText>
        <label>Objectives for the EBC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <description>Please enter the value in dollars for this opportunity, for example 100,000.00.  Dollar signs ($) may not be used.</description>
        <inlineHelpText>Please enter the value in dollars for this opportunity, for example 100,000.00.  Dollar signs ($) may not be used.</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>Please enter the target closed date. MM/DD/YEAR</description>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Summary__c</fullName>
        <inlineHelpText>For you to provide a summary of the the opportunity that having the EBC could bring to Nimble.</inlineHelpText>
        <label>Opportunity Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Attendees__c</fullName>
        <description>Please be sure you let us know ALL ATTENDEES.  An accurate list of customer/partner attendees is required for security purposes, ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</description>
        <inlineHelpText>Please be sure you let us know ALL ATTENDEES.  An accurate list of customer/partner attendees is required for security purposes, ordering the normal EBC schwag (pens, mints, notepads) and the EBC catering.</inlineHelpText>
        <label>Other Attendees</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <inlineHelpText>Any other items that should be identified to assist the EBC Coordinators with the planning or assist the presenter.</inlineHelpText>
        <label>Other Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Presentation_Requests_Comments__c</fullName>
        <description>For the above agenda items, the EBC Coordinators know who to book as the presenters with the exception of these two agenda topics:  &quot;Applications&quot; and &quot;Other&quot;.  Please provide a name of someone that you have in mind for those two agenda topics.

If you are requesting and agenda topic not listed above, please include a suggestion as to whom would be best to present for that new agenda item.</description>
        <inlineHelpText>For the above agenda items, the EBC Coordinators know who to book as the presenters with the exception of these two agenda topics:  &quot;Applications&quot; and &quot;Other&quot;.  Please provide a name of someone that you have in mind for those two agenda topics.</inlineHelpText>
        <label>Other Presentation Requests / Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Topics_Presenter__c</fullName>
        <label>Other Topics Presenter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_of_Alliances_Presenter__c</fullName>
        <inlineHelpText>Please identify if there are any specifics to this topic that you want discussed.</inlineHelpText>
        <label>Overview of Alliances Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_in_Marketplace__c</fullName>
        <description>A positioning statement is a single sentence or paragraph that explains exactly what the organization’s purpose for existence is AND very clearly outlines the benefits it provides to customers.</description>
        <inlineHelpText>A positioning statement is a single sentence or paragraph that explains exactly what the organization’s purpose for existence is AND very clearly outlines the benefits it provides to customers.</inlineHelpText>
        <label>Position in Marketplace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Roadmap_Presenter__c</fullName>
        <inlineHelpText>Please identify if there are any specific areas in the Product Roadmap to touch on, if needed.</inlineHelpText>
        <label>Product Roadmap Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Questions_Next_Steps_Presenter__c</fullName>
        <inlineHelpText>This is traditionally presented by the EBC Requestor.</inlineHelpText>
        <label>Questions &amp; Next Steps Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Please let us know which opportunity this is linked to.</description>
        <inlineHelpText>Please let us know which opportunity this is linked to.</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Request_1st_Choice_Date__c</fullName>
        <description>Please enter your first choice of Date that you would like.</description>
        <inlineHelpText>We will do all that we can to reserve your 1st or 2nd choice dates; however, this will be based on availability of the EBC room and the Executives/Presenters calendars.  Please do NOT guarantee these dates or book your travel.</inlineHelpText>
        <label>Resource Request 1st Choice Date:</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Request_2nd_Choice_Date__c</fullName>
        <description>A second date must be selected in case the first choice is not available.</description>
        <inlineHelpText>A second date must be selected in case the first choice is not available.</inlineHelpText>
        <label>Resource Request 2nd Choice Date:</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Request_End_Time__c</fullName>
        <description>Please select a desired end time. If the time wanted is not available, please update in the Additional Notes Section. NOTE: Most EXECS are NOT available after 4:00 PM (PST).</description>
        <inlineHelpText>Please select a desired end time. If the time wanted is not available, please update in the Additional Notes Section. NOTE: Most EXECS are NOT available after 4:00 PM (PST).</inlineHelpText>
        <label>Resource Request End Time:</label>
        <picklist>
            <picklistValues>
                <fullName>11:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM (PST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Start_Time__c</fullName>
        <description>Please select a start time for your event. If your desired time is not listed, please update the notes section.  Please note the Executives will not start prior to 9:00 AM and prefer not to stay later than 4:00 PM.</description>
        <inlineHelpText>Please select a start time for your event. If your desired time is not listed, please update the notes section.  Please note the Executives will not start prior to 9:00 AM and prefer not to stay later than 4:00 PM.</inlineHelpText>
        <label>Resource Request Start Time:</label>
        <picklist>
            <picklistValues>
                <fullName>9:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM (PST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM (PST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <description>An Executive Briefing usually hosts key decision makers from a high potential account. The Executive Briefing Program&apos;s host (usually an account manager) requests an EBC via the Resource Request button in SFDC.  The host/requestor fills out the necessary information and submits it.  It is then send to the EBC Coordinators to request the Briefing and works with the Executive Assistants to book the room and Presenters that will provide the appropriate level of executive interaction or a high degree of technical expertise based on the proposed agenda.

The events take place at Nimble Storage Headquarters in San Jose, CA.</description>
        <inlineHelpText>Use this field to identify what type of request you are seeking.</inlineHelpText>
        <label>Resource Request</label>
        <picklist>
            <picklistValues>
                <fullName>EBC</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Overview_Presenter__c</fullName>
        <inlineHelpText>Please identify in the comments field, what topics within Sales is needed for this EBC.</inlineHelpText>
        <label>Sales Overview Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment_Type__c</fullName>
        <label>Sales Segment Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Solution_Currently_Used__c</fullName>
        <description>Please help identify for the Executives the current solution this company currently uses and what Nimble Solution you feel they would benefit from.</description>
        <inlineHelpText>Please help identify for the Executives the current solution this company currently uses and what Nimble Solution you feel they would benefit from.</inlineHelpText>
        <label>Storage Solution Currently Used</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Visitors_Attending__c</fullName>
        <description>Please identify the number of external customer/partner attendees, as well as the total number of internal attendees.  The number of internal attendees should not include the presenters.

This will help us to order any necessary catering and schwag.  The normal schwag put out for EBCs is:  Notepad, Pen and Mints.

Anything beyond the normal schwag may be ordered by you via the MyNimbleGearStore site or by connecting with Julie Lewis.</description>
        <inlineHelpText>Please identify the number of external customer/partner attendees.  The correct number of external attendees is critical for food ordering and swag ordering.</inlineHelpText>
        <label>Total Visitors Attending</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VDI_Demo_Sizing_Presenter__c</fullName>
        <inlineHelpText>Please suggest in the comment field your proposed Presenter/Executive.</inlineHelpText>
        <label>VDI Demo &amp; Sizing Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>It is necessary for the company website to be listed so that the Executives/Presenters can do further research, as needed.</description>
        <inlineHelpText>It is necessary for the company website to be listed so that the Executives/Presenters can do further research, as needed.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Welcome_Introductions_Presenter__c</fullName>
        <description>The welcome and introductions is traditionally presented/owned by the EBC Requestor.</description>
        <inlineHelpText>The welcome and introductions is traditionally presented/owned by the EBC Requestor.</inlineHelpText>
        <label>Welcome &amp; Introductions Presenter</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_was_the_Top_Presenter_for_your_EBC__c</fullName>
        <description>Was there a presenter that stood out among the rest?  Was there a presenter that your customer/partner just could not stop talking about?  The presenter will not be made aware of this, it is merely for the EBC Coordinator.</description>
        <inlineHelpText>Was there a presenter that stood out among the rest?  Was there a presenter that your customer/partner just could not stop talking about?  The presenter will not be made aware of this, it is merely for the EBC Coordinator.</inlineHelpText>
        <label>Who was the Top Presenter for your EBC?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10_Channel_Overview_45_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10. Channel Overview (45 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X11_Applications_45_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>11. Applications (45 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X12_Other_Topics_see_notes_below__c</fullName>
        <defaultValue>false</defaultValue>
        <label>12. Other Topics (see notes below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X13_Questions_Next_Steps_15_30_min__c</fullName>
        <defaultValue>true</defaultValue>
        <label>13. Questions &amp; Next Steps (15-30 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_Introduction_10_15_min__c</fullName>
        <defaultValue>true</defaultValue>
        <label>1. Welcome &amp; Introduction (10-15 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2_Company_Overview_30_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2. Company Overview (30 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3_CASL_or_Tech_Deep_Dive_60_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3. CASL or Tech Deep Dive (60 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Architecture_Deep_Dive_60_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4. Architecture Deep Dive (60 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_VDI_Demo_Sizing_45_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5. VDI Demo &amp; Sizing (45 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6_Product_Road_Map_60_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>6. Product Road Map (60 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X7_Overview_of_Alliances_45_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>7. Overview of Alliances (45 min)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X8_Financial_Overview_30_min__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8. Financial Overview (30 min)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>